--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mujakkir Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1> <span class="orange-color">Mujakkir Ahmed</span> World!</h1>
+            <h3>Web Development Best Practices</h3>
+            <p>From simple machines to smartphones, it’s no secret that technology is becoming increasingly necessary in
+                our
+                everyday lives. Websites are a key component of any business, and every website or app that we come
+                across
+                is created by a web developer.Even the tools that allow non-developers to design easy websites (like
+                WordPress or Wix, those drag-and-drop systems much loved by anyone who can’t find their way around a
+                line of
+                HTML) are created by web developers. So as you can imagine, the need for web developers is high.
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://www.thinkful.com/blog/web-development-best-practices/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/port-img2.jpg" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
