add second section

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
             <h1> <span class="orange-color">Mujakkir Ahmed</span> World!</h1>
             <h3>Web Development Best Practices</h3>
             <p>From simple machines to smartphones, it’s no secret that technology is becoming increasingly necessary in
-                our
-                everyday lives. Websites are a key component of any business, and every website or app that we come
-                across
-                is created by a web developer.Even the tools that allow non-developers to design easy websites (like
-                WordPress or Wix, those drag-and-drop systems much loved by anyone who can’t find their way around a
-                line of
-                HTML) are created by web developers. So as you can imagine, the need for web developers is high.
+                our everyday lives. Websites are a key component of any business, and every website or app that we come
+                across is created by a web developer.Even the tools that allow non-developers to design easy websites
+                (like WordPress or Wix,those drag-and-drop systems much loved by anyone who can’t find their way around
+                a line ofHTML) are created by web developers. So as you can imagine, the need for web developers is
+                high.
             </p>
             <a class="link-button" target="_blank"
                 href="https://www.thinkful.com/blog/web-development-best-practices/">HIRE ME</a>
@@ -34,6 +32,29 @@
             <img src="images/port-img2.jpg" alt="">
         </div>
     </section>
+
+    <!-- 2nd Second Section -->
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/port-img2.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big </h1>
+            <h2>Become a web developer</h2>
+            <p>From simple machines to smartphones, it’s no secret that technology is becoming increasingly
+                necessary in our everyday lives. Websites are a key component of any business, and every website or
+                app that we come across is created by a web developer.Even the tools that allow non-developers to
+                design easy websites (like WordPress or Wix,those drag-and-drop systems much loved by anyone who
+                can’t find their way around a line ofHTML) are created by web developers. So as you can imagine, the
+                need for web developers is high.
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://www.thinkful.com/blog/web-development-best-practices/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
