--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner  flexible-container">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1> <span class="orange-color">Mujakkir Ahmed</span> World!</h1>
@@ -35,7 +35,7 @@
 
     <!-- 2nd Second Section -->
 
-    <section class="dream-big">
+    <section class="dream-big  flexible-container">
         <div class="half-width">
             <img src="images/port-img2.jpg" alt="">
         </div>
@@ -54,7 +54,35 @@
         </div>
     </section>
 
+    <!-- Thired Section-->
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="pro-dev" class="experience-item">
+                <h1>Full Stack developer</h1>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>From simple machines to smartphones, it’s no secret that technology is becoming increasingly
+                    necessary in
+                    our everyday lives. Websites are a key component of any business, and every website or app that we
+                    come
+                    across is created by a web developer.</p>
+            </div>
 
+            <div id="new-dev" class="experience-item">
+                <h1>New Web developer</h1>
+                <h3 class="orange-color">2022-Present | Start Learning Development</h3>
+                <p>From simple machines to smartphones, it’s no secret that technology is becoming increasingly
+                    necessary in
+                    our everyday lives. Websites are a key component of any business, and every website or app that we
+                    come
+                    across is created by a web developer.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@ Mujakkir 2022, Start Learning Programming </p>
+    </footer>
 </body>
 
 </html>
